dark mode css fixed

--- a/assets/sass/_dark.scss
+++ b/assets/sass/_dark.scss
@@ -24,7 +24,7 @@ body[data-dark] {
         color: #ccc;
     }
 
-    .tag, div.filters .btn-group, div.filters .btn-group a {
+    .tag, div.filters .btn-group, div.filters .btn-group a, .tools {
         border-color: #555;
     }
 
